# Scrabble

./: README.md
Dictionary Logic/: CMakeLists.txt  LInkedList.cpp  LInkedList.h  Node.cpp  Node.h  OrganizedFile.txt  Organizer.cpp  Organizer.h  ThisFile.txt  a.out  main.cpp
Dictionary Logic/Dictionaries/: a_chart.txt  c_words.txt  d_words.txt  f_words.txt  g_words.txt  i_chart.txt  i_words.txt  j_chart.txt  k_chart.txt  k_words.txt  (+10 more)
Scrabble/: Connector.cpp  gamewindow.cpp  gtile.cpp  menu.ui  rack.cpp  rack.h  resources.qrc  waitroom.cpp  waitroom.h
Server/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  Element.cpp  Element.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GenericLinkedList.h  GenericNode.cpp  GenericNode.h  JSONParser.cpp  JSONParser.h  LInkedList.cpp  LInkedList.h  LinkedList.cpp  LinkedList.h  NetPackage.cpp  NetPackage.h  Node.cpp  Node.h  NodeS.cpp  NodeS.h  NodeWord.cpp  NodeWord.h  Organizer.cpp  Organizer.h  PackTile.cpp  PackTile.h  Player.cpp  Player.h  ScrabbleServer.cpp  ScrabbleServer.h  Searcher.cpp  Searcher.h  Server.cpp  Server.h  SocketHandler.h  Stack.cpp  (+9 more)
Server/Database/: a_words.txt  b_chart.txt  b_words.txt  c_chart.txt  d_chart.txt  e_chart.txt  e_words.txt  f_chart.txt  g_chart.txt  h_chart.txt  h_words.txt  j_words.txt  l_words.txt  m_words.txt  n_chart.txt  n_words.txt  o_words.txt  p_chart.txt  q_words.txt  r_chart.txt  r_words.txt  s_chart.txt  t_chart.txt  t_words.txt  u_chart.txt  w_chart.txt  w_words.txt  x_chart.txt  x_words.txt  y_chart.txt  z_chart.txt  z_words.txt
Server/Logic/: Dictionary.cpp  Dictionary.h  Element.cpp  Element.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  NodeS.cpp  NodeS.h  Organizer.cpp  Organizer.h  Player.cpp  Player.h  Searcher.cpp  Searcher.h  Stack.cpp  Stack.h  Tile.cpp  Tile.h
Server/Networking/: GenericLinkedList.cpp  GenericLinkedList.h  GenericNode.h  JSONParser.cpp  JSONParser.h  PackTile.cpp  PackTile.h  Server.cpp  Server.h  SocketHandler.cpp  SocketHandler.h
